Resolved a spacing problem with landing page title at mobile size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,11 +22,12 @@ p {
     overflow: hidden;
     margin-bottom: 2rem;
     border-radius: .3rem;
+    
 }
+
 
 .jumbotron .display-4 {
     position: relative;
-    top: 10%;
     text-align: center;
     color: white;
     opacity: 1;
